--- a/css/style.css
+++ b/css/style.css
@@ -477,6 +477,22 @@ header li:not(:last-child):after {
    width: 400px;
 }
 
+.contact .send::-webkit-input-placeholder {
+   color: #d3d7d9;
+}
+
+.contact .send::-moz-placeholder {
+   color: #d3d7d9;
+}
+
+.contact .send:-ms-input-placeholder {
+   color: #d3d7d9;
+}
+
+.contact .send::-ms-input-placeholder {
+   color: #d3d7d9;
+}
+
 .contact .send::placeholder {
    color: #d3d7d9;
 }
@@ -516,6 +532,7 @@ header li:not(:last-child):after {
 }
 
 .social li a:hover img {
+   -webkit-filter: invert(1);
    filter: invert(1);
 }
 
@@ -584,7 +601,7 @@ header li:not(:last-child):after {
    .header .logo {
       display: none;
    }
-   
+
    .header .navigation {
       display: flex;
       flex-direction: column;
@@ -656,8 +673,6 @@ header li:not(:last-child):after {
       top: 13px;
       left: 0;
       background: #6dc196;
-      -webkit-transition: .2s;
-      -o-transition: .2s;
       transition: .2s;
       opacity: 1;
    }
@@ -671,8 +686,6 @@ header li:not(:last-child):after {
       left: 0;
       top: 0;
       background: #6dc196;
-      -webkit-transition: .2s;
-      -o-transition: .2s;
       transition: .2s;
    }
 
