--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
 * {
    margin: 0;
    padding: 0;
+   -webkit-box-sizing: border-box;
    box-sizing: border-box;
 }
 
@@ -83,8 +84,14 @@ img {
 }
 
 .header .navigation {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
 }
 
@@ -99,18 +106,27 @@ img {
 
 .header .logo {
    margin: 0 32px;
+   -ms-flex-negative: 0;
    flex-shrink: 0;
+   -ms-flex-preferred-size: 94px;
    flex-basis: 94px;
 }
 
 .header ul {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    width: calc(50% - 47px);
 }
 
 .header .left-menu {
+   -webkit-box-pack: end;
+   -ms-flex-pack: end;
    justify-content: flex-end;
 }
 
@@ -145,9 +161,18 @@ header li:not(:last-child):after {
 
 .col-1 {
    padding: 118px 280px 144px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
    flex-direction: column;
 }
 
@@ -205,11 +230,15 @@ header li:not(:last-child):after {
 }
 
 .row {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
 }
 
 .col-33 {
    width: 33.3%;
+   -webkit-box-flex: 1;
+   -ms-flex-positive: 1;
    flex-grow: 1;
    position: relative;
    overflow: hidden;
@@ -219,11 +248,15 @@ header li:not(:last-child):after {
    position: absolute;
    left: 50%;
    top: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
 }
 
 .col-66 {
    width: 66.6%;
+   -webkit-box-flex: 1;
+   -ms-flex-positive: 1;
    flex-grow: 1;
    position: relative;
    overflow: hidden;
@@ -243,6 +276,8 @@ header li:not(:last-child):after {
 
 .col-50 {
    width: 50%;
+   -webkit-box-flex: 1;
+   -ms-flex-positive: 1;
    flex-grow: 1;
    position: relative;
    overflow: hidden;
@@ -256,6 +291,8 @@ header li:not(:last-child):after {
    position: absolute;
    left: 50%;
    top: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
 }
 
@@ -263,9 +300,18 @@ header li:not(:last-child):after {
    background: #fff;
    min-height: 400px;
    padding: 52px 62px 40px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
    flex-direction: column;
 }
 
@@ -314,6 +360,8 @@ header li:not(:last-child):after {
    position: absolute;
    left: 50%;
    top: 0;
+   -webkit-transform: translateX(-50%);
+   -ms-transform: translateX(-50%);
    transform: translateX(-50%);
 }
 
@@ -321,6 +369,8 @@ header li:not(:last-child):after {
    position: absolute;
    left: 50%;
    top: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    min-width: 100%;
    min-height: 100%;
@@ -350,6 +400,8 @@ header li:not(:last-child):after {
    top: 0;
    width: 100%;
    height: 100%;
+   -webkit-transition: 0.3s;
+   -o-transition: 0.3s;
    transition: 0.3s;
    z-index: 5;
 }
@@ -370,10 +422,21 @@ header li:not(:last-child):after {
    position: absolute;
    left: 50%;
    top: 50%;
+   -webkit-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
    flex-direction: column;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
    color: #fff;
    text-transform: uppercase;
@@ -381,6 +444,8 @@ header li:not(:last-child):after {
    font-weight: 700;
    font-size: 14px;
    opacity: 0;
+   -webkit-transition: 0.3s;
+   -o-transition: 0.3s;
    transition: 0.3s;
    z-index: 10;
 }
@@ -401,6 +466,8 @@ header li:not(:last-child):after {
 
 .swiper-pagination2 {
    position: relative;
+   -webkit-transform: translateY(-100px);
+   -ms-transform: translateY(-100px);
    transform: translateY(-100px);
 }
 
@@ -424,7 +491,11 @@ header li:not(:last-child):after {
 
 .discover .row {
    height: 200px;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
 }
 
@@ -443,8 +514,15 @@ header li:not(:last-child):after {
 }
 
 .contact .row {
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
    flex-direction: column;
    padding: 108px 0;
 }
@@ -502,18 +580,31 @@ header li:not(:last-child):after {
 }
 
 .footer .row {
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
    padding: 95px 0;
 }
 
 .footer .col-inner {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
    justify-content: center;
 }
 
 .footer .ul-row {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: row;
    flex-direction: row;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
    align-items: center;
 }
 
@@ -528,6 +619,8 @@ header li:not(:last-child):after {
 }
 
 .social img {
+   -webkit-transition: 0.3s;
+   -o-transition: 0.3s;
    transition: 0.3s;
 }
 
@@ -603,9 +696,18 @@ header li:not(:last-child):after {
    }
 
    .header .navigation {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
       justify-content: flex-start;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       padding: 78px 10px 20px;
       background: #fff;
@@ -614,6 +716,8 @@ header li:not(:last-child):after {
       right: -300px;
       height: 100vh;
       width: 300px;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
       transition: .3s;
       z-index: 11;
    }
@@ -662,6 +766,8 @@ header li:not(:last-child):after {
       height: 28px;
       width: 28px;
       cursor: pointer;
+      -webkit-transition: 0.2s;
+      -o-transition: 0.2s;
       transition: 0.2s;
       z-index: 12;
    }
@@ -673,6 +779,8 @@ header li:not(:last-child):after {
       top: 13px;
       left: 0;
       background: #6dc196;
+      -webkit-transition: .2s;
+      -o-transition: .2s;
       transition: .2s;
       opacity: 1;
    }
@@ -686,6 +794,8 @@ header li:not(:last-child):after {
       left: 0;
       top: 0;
       background: #6dc196;
+      -webkit-transition: .2s;
+      -o-transition: .2s;
       transition: .2s;
    }
 
@@ -699,11 +809,15 @@ header li:not(:last-child):after {
    }
 
    .menu-opened .menu-button:before {
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
       transform: rotate(-45deg);
       top: 26px;
    }
 
    .menu-opened .menu-button::after {
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
       transform: rotate(45deg);
    }
 
@@ -713,6 +827,9 @@ header li:not(:last-child):after {
    }
 
    .main .row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
    }
 
@@ -729,6 +846,8 @@ header li:not(:last-child):after {
    }
 
    .swiper-pagination2 {
+      -webkit-transform: none;
+      -ms-transform: none;
       transform: none;
    }
 
@@ -743,7 +862,12 @@ header li:not(:last-child):after {
 
 @media (max-width: 568px) {
    .form-inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
    }
 
@@ -757,6 +881,9 @@ header li:not(:last-child):after {
    }
 
    .footer .row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
    }
 
@@ -765,6 +892,8 @@ header li:not(:last-child):after {
    }
 
    .soc {
+      -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
       order: -1;
    }
 }
